[gd_scene load_steps=34 format=2]

[ext_resource path="res://ShopCard.gd" type="Script" id=1]
[ext_resource path="res://Images/card/front0001.png" type="Texture" id=2]
[ext_resource path="res://Images/card/front0002.png" type="Texture" id=3]
[ext_resource path="res://Images/card/back0001.png" type="Texture" id=4]
[ext_resource path="res://Images/card/back0002.png" type="Texture" id=5]
[ext_resource path="res://Images/player/Rabbi/full-01.png" type="Texture" id=6]
[ext_resource path="res://Images/player/Rabbi/full-02.png" type="Texture" id=7]
[ext_resource path="res://Images/player/Priest/full-01.png" type="Texture" id=8]
[ext_resource path="res://Images/player/Priest/full-02.png" type="Texture" id=9]
[ext_resource path="res://Images/player/Granthi/full-01.png" type="Texture" id=10]
[ext_resource path="res://Images/player/Granthi/full-02.png" type="Texture" id=11]
[ext_resource path="res://Images/player/Imam/full-01.png" type="Texture" id=12]
[ext_resource path="res://Images/player/Imam/full-02.png" type="Texture" id=13]
[ext_resource path="res://Images/player/Monk/full-01.png" type="Texture" id=14]
[ext_resource path="res://Images/player/Monk/full-02.png" type="Texture" id=15]
[ext_resource path="res://Images/player/Pujari/full-01.png" type="Texture" id=16]
[ext_resource path="res://Images/player/Pujari/full-02.png" type="Texture" id=17]
[ext_resource path="res://Images/card/lock-01.png" type="Texture" id=18]
[ext_resource path="res://Images/card/lock-02.png" type="Texture" id=19]
[ext_resource path="res://Images/card/diamond-01.png" type="Texture" id=20]
[ext_resource path="res://Images/card/diamond-02.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 110 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "front",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "back",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "rabbi",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "priest",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "granthi",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "imam",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "monk",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "pujari",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=4]
hinting = 0
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = SubResource( 6 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=10]
size = 75
font_data = SubResource( 9 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=12]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Price/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6, 0.8, 0.9, 1, 1.1, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ShopCard" type="TouchScreenButton" groups=[
"ShopCard",
]]
shape = SubResource( 1 )
script = ExtResource( 1 )

[node name="CardAnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.447059, 0.447059, 0.447059, 1 )
frames = SubResource( 2 )
animation = "front"
playing = true

[node name="CharacterAnimatedSprite" type="AnimatedSprite" parent="CardAnimatedSprite"]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 3 )
animation = "granthi"
frame = 1
playing = true

[node name="Name" type="Label" parent="CardAnimatedSprite"]
margin_left = -38.0
margin_top = -102.293
margin_right = 38.0
margin_bottom = -64.2925
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Monk"

[node name="Descriiption" type="Label" parent="CardAnimatedSprite"]
margin_left = -67.0
margin_top = 58.0
margin_right = 69.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "description"
autowrap = true

[node name="LockAnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
frame = 1
playing = true

[node name="Price" type="Node2D" parent="."]
position = Vector2( 0, 150 )

[node name="Label" type="Label" parent="Price"]
margin_left = -32.0
margin_top = -37.0
margin_right = 16.0
margin_bottom = 34.0
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "5 "

[node name="AnimatedSprite" type="AnimatedSprite" parent="Price"]
position = Vector2( 49.0639, -5.26868 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 11 )
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cannot_buy = SubResource( 12 )
[connection signal="released" from="." to="." method="_on_ShopCard_released"]
